--- a/2-Control Flow/Conditionalstatements.ipynb
+++ b/2-Control Flow/Conditionalstatements.ipynb
@@ -2,23 +2,169 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "Eligible to Vote\n"
      ]
     }
    ],
    "source": [
     "##  if statement\n",
     "age=20\n",
-    "if age>=20:\n",
-    "    print(\"True\")"
+    "if age>=18:\n",
+    "    print(\"Eligible to Vote\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kid\n"
+     ]
+    }
+   ],
+   "source": [
+    "## else\n",
+    "## The else statement executes a block of the code if the condition in the if statement is False\n",
+    "\n",
+    "age=16\n",
+    "if age>=18:\n",
+    "    print(\"Eligible\")\n",
+    "else:\n",
+    "    print(\"Kid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eligible to vote\n"
+     ]
+    }
+   ],
+   "source": [
+    "## elif\n",
+    "# Allows you to check multiple conditions\n",
+    "\n",
+    "age=20\n",
+    "if age<=13:\n",
+    "    print(\"You are Kid\")\n",
+    "elif age<18:\n",
+    "    print(\"You are Teenager\")\n",
+    "else:\n",
+    "    print(\"Eligible to vote\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Nested consitional statements\n",
+    "\n",
+    "num=int(input(\"Enter Number\"))\n",
+    "if num>=0:\n",
+    "    print(\"Number is Positive\")\n",
+    "    if num%2==0:\n",
+    "        print(\"Number is Even\")\n",
+    "    else:\n",
+    "        print(\"Number is Odd\")\n",
+    "else:\n",
+    "    print(\"Number is Negative\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022 is not a Leap Year\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Examples\n",
+    "\n",
+    "# Leap year, using nested if\n",
+    "year=int(input(\"Enter Year: \"))\n",
+    "\n",
+    "if year%4==0:\n",
+    "    if year%100==0:\n",
+    "        if year%4==0:\n",
+    "            print(year,\" is a Leap Year\")\n",
+    "        else:\n",
+    "            print(year, \"is not a Leap Year\")\n",
+    "    else:\n",
+    "        print(year, \"is not a Leap Year\")\n",
+    "else:\n",
+    "    print(year, \"is not a Leap Year\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simple calculator\n",
+    "num1=int(input(\"Enter Number 1: \"))\n",
+    "num2=int(input(\"Enter Number 2: \"))\n",
+    "op= input(\"Enter Operation: \")\n",
+    "if op=='+':\n",
+    "    print(num1+num2)\n",
+    "elif op=='-':\n",
+    "    print(num1+num2)\n",
+    "elif op=='*':\n",
+    "    print(num1*num2)\n",
+    "elif op=='/':\n",
+    "    print(num1/num2)\n",
+    "else:\n",
+    "    print(\"Invalid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
