--- a/3-Data Structures/3.4-Dictionaries.ipynb
+++ b/3-Data Structures/3.4-Dictionaries.ipynb
@@ -175,24 +175,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'age', 'address'])\n",
+      "dict_values(['Prasanna', 32, 'India'])\n",
+      "dict_items([('name', 'Prasanna'), ('age', 32), ('address', 'India')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Dictionary Methods\n",
+    "\n",
+    "# Keys and Keys\n",
+    "keys = student.keys()\n",
+    "print(keys)\n",
+    "values = student.values()\n",
+    "print(values)\n",
+    "\n",
+    "items = student.items() # List of tuples of all key-value pairs\n",
+    "print(items)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Prasanna', 'age': 32, 'address': 'India'}\n",
+      "{'name': 'Prasanna', 'age': 32, 'address': 'India'}\n",
+      "{'name': 'Gayathri', 'age': 32, 'address': 'India'}\n",
+      "{'name': 'Gayathri', 'age': 32, 'address': 'India'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Shallow copy\n",
+    "student_copy = student\n",
+    "print(student)\n",
+    "print(student_copy)\n",
+    "\n",
+    "student['name'] = \"Gayathri\"\n",
+    "print(student)\n",
+    "print(student_copy)\n",
+    "# student and student_copy key values are changed\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Gayathri', 'age': 32, 'address': 'India'}\n",
+      "{'name': 'Gayathri', 'age': 32, 'address': 'India'}\n",
+      "{'name': 'Prasanna', 'age': 32, 'address': 'India'}\n",
+      "{'name': 'Gayathri', 'age': 32, 'address': 'India'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To prevent this and exactly get the copy, we need to use shallow copy\n",
+    "student_copy = student.copy() # Allocates new memory location\n",
+    "print(student)\n",
+    "print(student_copy)\n",
+    "\n",
+    "student['name'] = \"Prasanna\"\n",
+    "print(student)\n",
+    "print(student_copy)"
+   ]
   },
   {
    "cell_type": "code",
