--- a/3-Data Structures/3.4-Dictionaries.ipynb
+++ b/3-Data Structures/3.4-Dictionaries.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,6 +255,172 @@
     "print(student)\n",
     "print(student_copy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "age\n",
+      "address\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Iterating Over Dictionaries\n",
+    "## You can use loops to iterare over dictionaries, keys, values or items\n",
+    "\n",
+    "## Iterating over keys\n",
+    "for keys in student.keys():\n",
+    "    print(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prasanna\n",
+      "32\n",
+      "India\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Iterate ove values\n",
+    "for value in student.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Prasanna\n",
+      "age: 32\n",
+      "address: India\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Iterate over key value pairs\n",
+    "for key, value in student.items():\n",
+    "    print(f\"{key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'student1': {'name': 'Prasanna', 'age': 32}, 'student2': {'name': 'Peter', 'age': 33}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Nested Dictionaries\n",
+    "# In MongoDB everything is stored as key-value pairs\n",
+    "\n",
+    "students={\n",
+    "    \"student1\":{\"name\":\"Prasanna\", \"age\":32},\n",
+    "    \"student2\":{\"name\":\"Peter\", \"age\":33}\n",
+    "}\n",
+    "print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peter\n",
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Access nested Dictionaries\n",
+    "print(students[\"student2\"][\"name\"])\n",
+    "print(students[\"student2\"][\"age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student1: {'name': 'Prasanna', 'age': 32}\n",
+      "name: Prasanna\n",
+      "age: 32\n",
+      "student2: {'name': 'Peter', 'age': 33}\n",
+      "name: Peter\n",
+      "age: 33\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Iterating over nested Dictionaries\n",
+    "for student_id, student_info in students.items():\n",
+    "    print(f\"{student_id}: {student_info}\")\n",
+    "    for key, value in student_info.items():\n",
+    "        print(f\"{key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
