--- a/3-Data Structures/3.4-Dictionaries.ipynb
+++ b/3-Data Structures/3.4-Dictionaries.ipynb
@@ -394,25 +394,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "## Dictionary Comprehension\n",
+    "squares={x:x**2 for x in range(10)}\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 2: 4, 4: 16, 6: 36, 8: 64}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Conditional Dictionary Comprehension\n",
+    "even={x:x**2 for x in range(10) if x%2==0}\n",
+    "print(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 2, 3: 3, 4: 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Practical Examples\n",
+    "# Use a dictionary to count the frequency of elements in list\n",
+    "\n",
+    "numbers = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4]\n",
+    "frequency = {}\n",
+    "\n",
+    "for number in numbers:\n",
+    "    if number in frequency:\n",
+    "        frequency[number]+=1\n",
+    "    else:\n",
+    "        frequency[number]=1\n",
+    "print(frequency)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 3, 'c': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Merge 2 Dictionaires into one\n",
+    "dict1={\"a\":1, \"b\":2}\n",
+    "dict2={\"b\":3, \"c\":4}\n",
+    "merge_dict={**dict1, **dict2}\n",
+    "print(merge_dict) #Key word arguments"
    ]
   },
   {
