--- a/3-Data Structures/3.1.1-ListExamples.ipynb
+++ b/3-Data Structures/3.1.1-ListExamples.ipynb
@@ -103,14 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "oranges are in stock\n"
+      "oranges are in stock\n",
+      "Inventory List:\n",
+      "-apples\n",
+      "-oranges\n",
+      "-grapes\n",
+      "-Straberries\n"
      ]
     }
    ],
@@ -129,15 +134,57 @@
     "if item in inventory:\n",
     "    print(f\"{item} are in stock\")\n",
     "else:\n",
-    "    print(f\"{item} are out of stock\")\n"
+    "    print(f\"{item} are out of stock\")\n",
+    "\n",
+    "# Printing the Inventory\n",
+    "print(\"Inventory List:\")\n",
+    "for item in inventory:\n",
+    "    print(f\"-{item}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 4: Collecting User Feedback\n",
+    "- Use a list to collect and analyze user feedback"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Postive Feedback Count: 2\n",
+      "User Feedback: \n",
+      "-Great Service\n",
+      "-Very Satisfied\n",
+      "-Could Be Better\n",
+      "-Excellent Experience\n",
+      "-Not Happy With The Service\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Collecting User Feedback\n",
+    "feedback = [\"Great Service\", \"Very Satisfied\", \"Could Be Better\", \"Excellent Experience\"]\n",
+    "\n",
+    "# Adding new Feedback\n",
+    "feedback.append(\"Not Happy With The Service\")\n",
+    "\n",
+    "# Counting specific feedback\n",
+    "possitive_feedback_count = sum(1 for comment in feedback if \"great\" in comment.lower() or \"excellent\" in comment.lower())\n",
+    "print(f\"Postive Feedback Count: {possitive_feedback_count}\")\n",
+    "\n",
+    "# Printing all feedback\n",
+    "print(\"User Feedback: \")\n",
+    "for comment in feedback:\n",
+    "    print(f\"-{comment}\")"
+   ]
   }
  ],
  "metadata": {
