--- a/4-Functions/4.2-examples.ipynb
+++ b/4-Functions/4.2-examples.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 2: Calculate the Total Cost Of Itmes In a Shopping Cart"
+    "Example 2: Password Strength Checker"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 3: Check If a String Is Palindrome"
+    "Example 3: Calculate the Total Cost Of Itmes In a Shopping Cart"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 4: Calculate the factorials of a number using recursion"
+    "Example 4: Check If a String is Palindrome"
    ]
   },
   {
