--- a/4-Functions/4.2-examples.ipynb
+++ b/4-Functions/4.2-examples.ipynb
@@ -131,10 +131,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(s):\n",
+    "    s=s.lower().replace(\" \", \"\")\n",
+    "    return s==s[::-1]\n",
+    "\n",
+    "print(is_palindrome(\"A man a plan a canal Panama\"))\n",
+    "print(is_palindrome(\"Abraka dhabra\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n==0:\n",
+    "        return 1\n",
+    "    return n * factorial(n-1)\n",
+    "\n",
+    "print(factorial(5))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,10 +190,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hello': 1, 'world': 1, 'how': 1, 'are': 1, 'you': 1, 'i': 3, 'am': 3, 'fine': 1, 'who': 1, 'prasanna': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## sample.txt\n",
+    "def count_word_frequency(file_path):\n",
+    "    word_count={}\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            words=line.split()\n",
+    "            for word in words:\n",
+    "                word=word.lower().strip('.,!?;\"\\'')\n",
+    "                word_count[word]=word_count.get(word, 0)+1\n",
+    "    return word_count\n",
+    "\n",
+    "filepath='sample.txt'\n",
+    "word_frequency=count_word_frequency(filepath)\n",
+    "print(word_frequency)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +227,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re # Regular Expression\n",
+    "# Email validation function\n",
+    "def is_valid_email(email):\n",
+    "    \"\"\"This function checks if the email is valid or not\"\"\"\n",
+    "    pattern = r'^[a-zA-Z0-9_.+-] + @[a-zA-Z0-9-.] + \\.[a-zA-Z0-9-.]+$'\n",
+    "    return re.match(pattern, email) is not None\n",
+    "\n",
+    "# Calling the function\n",
+    "print(is_valid_email(\"prasanna@gmail.com\"))\n",
+    "print(is_valid_email(\"prasanna.com\"))\n",
+    "print(is_valid_email(\"prasanna-email\"))"
+   ]
   }
  ],
  "metadata": {
