--- a/4-Functions/4.3-Lambda.ipynb
+++ b/4-Functions/4.3-Lambda.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -180,13 +180,16 @@
        "[1, 4, 9, 16, 25, 36]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(map(lambda x:x**2, numbers))"
+    "list(map(lambda x:x**2, numbers))\n",
+    "\n",
+    "# map(function, iterables) -->map object\n",
+    "# so, converting into list"
    ]
   }
  ],
