--- a/4-Functions/CodingExercise.ipynb
+++ b/4-Functions/CodingExercise.ipynb
@@ -212,6 +212,146 @@
     "print(case1)\n",
     "print(case2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Number of Rounds of Lift\n",
+    "Problem Description:\n",
+    "You are given n, the total number of people, and capacity, the maximum number of people the lift can carry at a time. All people want to go from the ground floor to the top floor. Your task is to calculate the number of rounds the lift has to make to transport all the people to the top floor.\n",
+    "\n",
+    "Input:\n",
+    "\n",
+    "Two integers, n and capacity, where n is the total number of people, and capacity is the maximum number of people the lift can carry in one round.\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "An integer representing the number of rounds the lift needs to cover to transport all people to the top floor.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: n = 10, capacity = 3\n",
+    "Output: 4\n",
+    " \n",
+    "Input: n = 7, capacity = 4\n",
+    "Output: 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_lift_rounds(n, capacity):\n",
+    "    \"\"\"\n",
+    "    Function to calculate the number of rounds the lift needs to cover.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    n (int): Total number of people.\n",
+    "    capacity (int): Maximum number of people the lift can carry in one round.\n",
+    "    \n",
+    "    Returns:\n",
+    "    int: The number of rounds required to transport all people to the top floor.\n",
+    "    \"\"\"\n",
+    "    # Your code here\n",
+    "    return n//capacity + int(n%capacity>0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=calculate_lift_rounds(10, 3)\n",
+    "case2=calculate_lift_rounds(7, 4)\n",
+    "print(case1)\n",
+    "print(case2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Line Equation\n",
+    "Problem Description:\n",
+    "\n",
+    "You are given the slope m and the y-intercept b of a line, along with a value x. Your task is to calculate and return the value of y using the equation of a line in slope-intercept form:\n",
+    "\n",
+    "y=mx+b\n",
+    "\n",
+    "Input:\n",
+    "\n",
+    "Three floating-point numbers: slope, intercept, and x.\n",
+    "\n",
+    "Output:\n",
+    "\n",
+    "A floating-point number representing the value of yyy corresponding to the given xxx.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: slope = 2, intercept = 3, x = 4\n",
+    "Output: 11.0\n",
+    " \n",
+    "Input: slope = 1.5, intercept = -2, x = 2\n",
+    "Output: 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_y(slope, intercept, x):\n",
+    "    \"\"\"\n",
+    "    Function to calculate the value of y using the slope-intercept form of a line.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    slope (float): The slope of the line.\n",
+    "    intercept (float): The y-intercept of the line.\n",
+    "    x (float): The value of x for which y needs to be calculated.\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: The calculated value of y.\n",
+    "    \"\"\"\n",
+    "    # Your code here\n",
+    "    return slope*x + intercept\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=calculate_y(2, 3, 4)\n",
+    "case2=calculate_y(1.5, -2, 2)\n",
+    "print(case1)\n",
+    "print(case2)"
+   ]
   }
  ],
  "metadata": {
