Data Structures Coding Exercise

--- a/CodingExercise-DataStructure.ipynb
+++ b/CodingExercise-DataStructure.ipynb
@@ -127,6 +127,71 @@
     "print(case1)\n",
     "print(case2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remove Duplicate in a List\n",
+    "Remove Duplicates from a List\n",
+    "\n",
+    "You are given a list of integers. Write a Python program that removes any duplicate elements from the list and returns a new list with only unique elements. The order of elements in the list should be maintained.\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "lst (List of integers): The list of integers from which duplicates should be removed.\n",
+    "\n",
+    "Returns:\n",
+    "\n",
+    "A list of integers where all duplicates have been removed, preserving the original order.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: lst = [1, 2, 2, 3, 4, 4, 5]\n",
+    "Output: [1, 2, 3, 4, 5]\n",
+    "\n",
+    "Input: lst = [4, 5, 5, 4, 6, 7]\n",
+    "Output: [4, 5, 6, 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_duplicates(lst):\n",
+    "    # Your code goes here\n",
+    "    unique_list=[]\n",
+    "    \n",
+    "    for item in lst:\n",
+    "        if item not in unique_list:\n",
+    "            unique_list.append(item)\n",
+    "    return unique_list\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=remove_duplicates([1, 2, 2, 3, 4, 4, 5])\n",
+    "case2=remove_duplicates([4, 5, 5, 4, 6, 7])\n",
+    "print(case1)\n",
+    "print(case2)"
+   ]
   }
  ],
  "metadata": {
