--- a/CodingExercise-DataStructure.ipynb
+++ b/CodingExercise-DataStructure.ipynb
@@ -192,6 +192,73 @@
     "print(case1)\n",
     "print(case2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check if all elements in a List are Unique\n",
+    "Check if All Elements in a List are Unique\n",
+    "\n",
+    "You are given a list of integers. Write a Python program that checks if all elements in the list are unique. If all elements are unique, return True; otherwise, return False.\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "lst (List of integers): The list of integers to check for uniqueness.\n",
+    "\n",
+    "Returns:\n",
+    "\n",
+    "A boolean value True if all elements in the list are unique, False otherwise.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: lst = [1, 2, 3, 4, 5]\n",
+    "Output: True\n",
+    "\n",
+    "Input: lst = [1, 2, 3, 3, 4, 5]\n",
+    "Output: False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_unique(lst):\n",
+    "    # Your code goes here\n",
+    "    lst1 = []\n",
+    "    for num in lst:\n",
+    "        if num not in lst1:\n",
+    "            lst1.append(num)\n",
+    "            \n",
+    "    if len(lst)==len(lst1):\n",
+    "        return True\n",
+    "    return False\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=[1, 2, 3, 4, 5]\n",
+    "case2=[1, 2, 3, 3, 4, 5]\n",
+    "print(case1)\n",
+    "print(case2)"
+   ]
   }
  ],
  "metadata": {
