--- a/CodingExercise-DataStructure.ipynb
+++ b/CodingExercise-DataStructure.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,24 +240,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n",
-      "[1, 2, 3, 3, 4, 5]\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
    "source": [
     "## Test Cases:\n",
-    "case1=[1, 2, 3, 4, 5]\n",
-    "case2=[1, 2, 3, 3, 4, 5]\n",
+    "case1=check_unique([1, 2, 3, 4, 5])\n",
+    "case2=check_unique([1, 2, 3, 3, 4, 5])\n",
     "print(case1)\n",
     "print(case2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reverse a List\n",
+    "Reverse a List (Non-Slicing Approach)\n",
+    "\n",
+    "You are given a list of integers. Write a Python program that reverses the list without using slicing (lst[::-1]). The program should return the reversed list.\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "lst (List of integers): The list of integers to be reversed.\n",
+    "\n",
+    "Returns:\n",
+    "\n",
+    "A list of integers where the order of elements is reversed from the input list.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: lst = [1, 2, 3, 4, 5]\n",
+    "Output: [5, 4, 3, 2, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_list(lst):\n",
+    "    # Your code goes here\n",
+    "    start = 0\n",
+    "    end = len(lst) -1\n",
+    "    while(start<end):\n",
+    "        lst[start], lst[end] = lst[end], lst[start]\n",
+    "        start += 1\n",
+    "        end -= 1\n",
+    "    return lst\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=reverse_list([1, 2, 3, 4, 5])\n",
+    "print(case1)"
    ]
   }
  ],
