--- a/CodingExercise-DataStructure.ipynb
+++ b/CodingExercise-DataStructure.ipynb
@@ -319,6 +319,145 @@
     "case1=reverse_list([1, 2, 3, 4, 5])\n",
     "print(case1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Number of Odd and Even Elements in a list\n",
+    "Count Even and Odd Numbers in a List\n",
+    "\n",
+    "You are given a list of integers. Write a Python program that counts and returns the number of even and odd numbers in the list.\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "lst (List of integers): The list of integers where you will count the even and odd numbers.\n",
+    "\n",
+    "Returns:\n",
+    "\n",
+    "A tuple (even_count, odd_count) where even_count is the number of even numbers and odd_count is the number of odd numbers.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: lst = [1, 2, 3, 4, 5]\n",
+    "Output: (2, 3)\n",
+    "\n",
+    "There are 2 even numbers: 2, 4\n",
+    "\n",
+    "There are 3 odd numbers: 1, 3, 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_even_odd(lst):\n",
+    "    # Your code goes here\n",
+    "    even = 0\n",
+    "    odd = 0\n",
+    "    for num in lst:\n",
+    "        if num%2==0:\n",
+    "            even += 1\n",
+    "        else:\n",
+    "            odd += 1\n",
+    "    return even, odd\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=count_even_odd([1, 2, 3, 4, 5])\n",
+    "print(case1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check if List is Subset of Another List\n",
+    "Check if a List is a Subset of Another List (Brute Force Approach)\n",
+    "\n",
+    "You are given two lists of integers. Write a Python program that checks whether the first list is a subset of the second list using a brute-force approach, without using the in keyword. A list is considered a subset if all elements of the first list are present in the second list.\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "lst1 (List of integers): The first list, which is being checked as a subset.\n",
+    "\n",
+    "lst2 (List of integers): The second list, which is the list to compare against.\n",
+    "\n",
+    "Returns:\n",
+    "\n",
+    "A boolean value True if lst1 is a subset of lst2, otherwise False.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: lst1 = [1, 2, 3], lst2 = [1, 2, 3, 4, 5]\n",
+    "Output: True\n",
+    "\n",
+    "All elements in lst1 are present in lst2.\n",
+    "\n",
+    "Input: lst1 = [1, 6], lst2 = [1, 2, 3, 4, 5]\n",
+    "Output: False\n",
+    "\n",
+    "The element 6 is not present in lst2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_subset(lst1, lst2):\n",
+    "    # Your code goes here\n",
+    "    if len(lst1)> len(lst2):\n",
+    "        for num in lst2:\n",
+    "            if num not in lst1:\n",
+    "                return False\n",
+    "    else:\n",
+    "        for num in lst1:\n",
+    "            if num not in lst2:\n",
+    "                return False\n",
+    "    return True\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=is_subset([1, 2, 3], [1, 2, 3, 4, 5])\n",
+    "case2=is_subset([1, 6], [1, 2, 3, 4, 5])\n",
+    "print(case1)\n",
+    "print(case2)"
+   ]
   }
  ],
  "metadata": {
