--- a/CodingExercise-DataStructure.ipynb
+++ b/CodingExercise-DataStructure.ipynb
@@ -458,6 +458,219 @@
     "print(case1)\n",
     "print(case2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Maximum Difference between 2 consecutive elements in a List\n",
+    "Find Maximum Difference Between Two Consecutive Elements (Brute Force Approach)\n",
+    "\n",
+    "You are given a list of integers. Write a Python program to find the maximum difference between two consecutive elements in the list using a brute-force approach. The difference is defined as the absolute value of the difference between two consecutive elements.\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "lst (List of integers): A list of integers.\n",
+    "\n",
+    "Returns:\n",
+    "\n",
+    "An integer representing the maximum difference between two consecutive elements.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: lst = [1, 7, 3, 10, 5]\n",
+    "Output: 7\n",
+    "\n",
+    "The maximum difference is between 3 and 10 (i.e., |3 - 10| = 7).\n",
+    "\n",
+    "Input: lst = [10, 11, 15, 3]\n",
+    "Output: 12\n",
+    "\n",
+    "The maximum difference is between 15 and 3 (i.e., |15 - 3| = 12)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_consecutive_difference(lst):\n",
+    "    # Your code goes here\n",
+    "    if len(lst)==0:\n",
+    "        return 0\n",
+    "        \n",
+    "    max_num = 0\n",
+    "    \n",
+    "    for i in range(len(lst) - 1):\n",
+    "        \n",
+    "        diff = abs(lst[i] - lst[i+1])\n",
+    "        \n",
+    "        if diff > max_num:\n",
+    "            max_num = diff\n",
+    "            \n",
+    "    return max_num\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=max_consecutive_difference([1, 7, 3, 10, 5])\n",
+    "case2=max_consecutive_difference([10, 11, 15, 3])\n",
+    "print(case1)\n",
+    "print(case2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merge two sorted List\n",
+    "\n",
+    "You are given two sorted lists of integers. Write a Python function to merge these two sorted lists into one sorted list. The resulting list should also be in non-decreasing order.\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "list1 (List of integers): The first sorted list.\n",
+    "\n",
+    "list2 (List of integers): The second sorted list.\n",
+    "\n",
+    "Returns:\n",
+    "\n",
+    "A single list of integers, containing all elements from list1 and list2, sorted in non-decreasing order.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: list1 = [1, 3, 5], list2 = [2, 4, 6]\n",
+    "Output: [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "Input: list1 = [1, 4, 7], list2 = [2, 3, 5, 8]\n",
+    "Output: [1, 2, 3, 4, 5, 7, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_two_sorted_lists(list1, list2):\n",
+    "    # Your code goes here\n",
+    "    for num in list1:\n",
+    "        if num not in list2:\n",
+    "            list2.append(num)\n",
+    "            \n",
+    "    list2.sort()\n",
+    "            \n",
+    "    return list2\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=merge_two_sorted_lists([1, 3, 5], [1, 2, 3, 4, 5, 6])\n",
+    "case2=merge_two_sorted_lists([2, 3, 5, 8], [1, 2, 3, 4, 5, 7, 8])\n",
+    "print(case1)\n",
+    "print(case2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Rotate a List\n",
+    "Rotate a List (Without Slicing)\n",
+    "\n",
+    "You are given a list of integers and an integer k. Write a Python function to rotate the list to the right by k positions without using slicing. A rotation shifts elements from the end of the list to the front.\n",
+    "\n",
+    "Parameters:\n",
+    "\n",
+    "lst (List of integers): The list to be rotated.\n",
+    "\n",
+    "k (Integer): The number of positions to rotate the list.\n",
+    "\n",
+    "Returns:\n",
+    "\n",
+    "A list of integers rotated by k positions.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input: lst = [1, 2, 3, 4, 5], k = 2\n",
+    "Output: [4, 5, 1, 2, 3]\n",
+    "\n",
+    "Input: lst = [10, 20, 30, 40, 50], k = 3\n",
+    "Output: [30, 40, 50, 10, 20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rotate_list(lst, k):\n",
+    "    # Your code goes here\n",
+    "    \n",
+    "    l = len(lst)\n",
+    "    if l == 0:\n",
+    "        return []\n",
+    "        \n",
+    "    for i in range(k):\n",
+    "        last = lst.pop()\n",
+    "        lst.insert(0, last)\n",
+    "    return lst\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 1, 2, 3]\n",
+      "[30, 40, 50, 10, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test Cases:\n",
+    "case1=rotate_list([1, 2, 3, 4, 5], 2)\n",
+    "case2=rotate_list([10, 20, 30, 40, 50], 3)\n",
+    "print(case1)\n",
+    "print(case2)"
+   ]
   }
  ],
  "metadata": {
