--- a/5-Modules/5.2-Standardlibrary.ipynb
+++ b/5-Modules/5.2-Standardlibrary.ipynb
@@ -12,18 +12,281 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 300k+ libraries are there"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array('i', [1, 2, 3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import array\n",
+    "arr = array.array('i', [1, 2, 3, 4]) # integers\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(math.sqrt(16))\n",
+    "print(math.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "chery\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "print(random.randint(1, 10))\n",
+    "print(random.choice(['apple', 'banana', 'chery']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\Data Science\\Python\\5-Modules\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Files and Directory Access\n",
+    "import os\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.mkdir('test_dir')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'destination.txt'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## High Level Operations on Files and Collections of files\n",
+    "import shutil\n",
+    "shutil.copyfile('source.txt', 'destination.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"name\": \"Prasanna\", \"age\": 23}\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Data Serialization\n",
+    "# Converting Dictionary into JSON\n",
+    "import json\n",
+    "data = {'name':'Prasanna', 'age':23}\n",
+    "\n",
+    "json_str = json.dumps(data)\n",
+    "print(json_str)\n",
+    "print(type(json_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Prasanna', 'age': 23}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "json_dict = json.loads(json_str)\n",
+    "print(json_dict)\n",
+    "print(type(json_dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['name', 'age']\n",
+      "['Prasanna', '23']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## CSV\n",
+    "import csv\n",
+    "with open('example.csv', mode='w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['name', 'age'])\n",
+    "    writer.writerow(['Prasanna', 23])\n",
+    "\n",
+    "with open('example.csv', mode='r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-11-07 15:19:46.843976\n",
+      "2024-11-06 15:19:46.843976\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Date Time\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "now = datetime.now()\n",
+    "print(now)\n",
+    "\n",
+    "yesterday = now-timedelta(days=1)\n",
+    "print(yesterday)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1730973020.746186\n",
+      "1730973022.755112\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Time\n",
+    "import time\n",
+    "print(time.time())\n",
+    "time.sleep(2)\n",
+    "print(time.time())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Regular Expression\n",
+    "import re\n",
+    "pattern = r'\\d+'\n",
+    "text = 'There are 123 apples 456'\n",
+    "match = re.search(pattern, text)\n",
+    "print(match.group())"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
