File Operations Write

--- a/6-File Handling/fileoperation.ipynb
+++ b/6-File Handling/fileoperation.ipynb
@@ -66,10 +66,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Writing a file (Over writing)\n",
+    "\n",
+    "with open('example.txt', 'w') as file:\n",
+    "    file.write('Hello World\\n')\n",
+    "    file.write('This is a new line')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Writing back previous content for previous content\n",
+    "with open('example.txt', 'w') as file:\n",
+    "    file.write(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Write a file without Over writing\n",
+    "with open('example.txt', 'a') as file:\n",
+    "    file.write('Appended new line\\n')\n",
+    "    file.write('This is a new line')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Writing a list of lines to a file\n",
+    "lines = ['First Line\\n', 'Second Line\\n', 'Third Line\\n', 'Fourth Line\\n', 'Fifth Line\\n', 'Sixth Line\\n', 'Seventh Line\\n']\n",
+    "with open('example.txt', 'a') as file:\n",
+    "    file.writelines(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Binary Files\n"
+   ]
   }
  ],
  "metadata": {
