File Operations wb rb

--- a/6-File Handling/fileoperation.ipynb
+++ b/6-File Handling/fileoperation.ipynb
@@ -120,8 +120,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Binary Files\n"
+    "## Binary Files\n",
+    "## In binary file we use bytes\n",
+    "data = b'\\x00\\x01\\x02\\x03\\x04'\n",
+    "with open('example.bin','wb') as file: #write byte or read byte\n",
+    "    file.write(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x01\\x02\\x03\\x04'\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('example.bin','rb') as file: #write byte or read byte\n",
+    "    content_binary = file.read()\n",
+    "    print(content_binary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Read the content from a source file and write it into a destination file\n",
+    "\n",
+    "with open('example.txt','r') as source_file: #write byte or read byte\n",
+    "    content = source_file.read()\n",
+    "\n",
+    "with open('destination.txt', 'w') as destination_file:\n",
+    "    destination_file.write(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Read a text file and count the number of lines, words and characters\n",
+    "## Counting lines, words, and the characters in a text file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
