--- a/6-File Handling/fileoperation.ipynb
+++ b/6-File Handling/fileoperation.ipynb
@@ -163,20 +163,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Read a text file and count the number of lines, words and characters\n",
-    "## Counting lines, words, and the characters in a text file\n"
+    "## Counting lines, words, and the characters in a text file\n",
+    "def count_text_file(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        line_count = len(lines)\n",
+    "        word_count = sum(len(line.split()) for line in lines)\n",
+    "        char_count = sum(len(line) for line in lines)\n",
+    "    return line_count, word_count, char_count"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lines: 14, Words: 59, Characters: 332\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'example.txt'\n",
+    "lines, words, characters = count_text_file(file_path)\n",
+    "print(f'Lines: {lines}, Words: {words}, Characters: {characters}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The __w+__ mode in Python is used to open a file for both reading and writing. If the file doesn't exist, it will be created. If the file exists, its content is truncated(i.e, the file is overwritten)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Worlds\n",
+      "This is a new line \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Writing and then Reading a File\n",
+    "with open('text.txt', 'w+') as file:\n",
+    "    file.write(\"Hello Worlds\\n\")\n",
+    "    file.write(\"This is a new line \\n\")\n",
+    "\n",
+    "    # Move the cursor to the begining\n",
+    "    file.seek(0)\n",
+    "    \n",
+    "    ## Read the content of the file\n",
+    "    content = file.read()\n",
+    "    print(content)\n"
+   ]
   }
  ],
  "metadata": {
