--- a/6-File Handling/6.2-filepath.ipynb
+++ b/6-File Handling/6.2-filepath.ipynb
@@ -152,10 +152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\Data Science\\Python\\6-File Handling\\example.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Getting the absolute path\n",
+    "relative_path = 'example.txt'\n",
+    "absolute_path = os.path.abspath(relative_path)\n",
+    "print(absolute_path)"
+   ]
   }
  ],
  "metadata": {
