--- a/8-Class And Objects/8.3-Polymorphism.ipynb
+++ b/8-Class And Objects/8.3-Polymorphism.ipynb
@@ -179,6 +179,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "Polymorphism is a powerful feature of OOP that allows for flexibility and integration in code design. It enables a single function to handle objects of different classes, each with its own implementaton of a method. By understanding and applying polymorphism, you can create more extensible and maintainable object-oriented programs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
