--- a/8-Class And Objects/8.5-Abstraction.ipynb
+++ b/8-Class And Objects/8.5-Abstraction.ipynb
@@ -14,14 +14,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Example:- Washing Machine\n",
+    "# start, stop, timer are clickables and visible objects for us\n",
+    "# how internall process will be carried when we click start, stop, timer and we need not\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car Engine Started\n",
+      "The Vehicle is Driving\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod #abstraction\n",
+    "\n",
+    "## Abstract Class or Abstract Base Class\n",
+    "class Vehicle(ABC):\n",
+    "    def drive(self):\n",
+    "        print(\"The Vehicle is used for Driving\")\n",
+    "\n",
+    "    @abstractmethod # Complete empty function - created for when child class, it can create its own\n",
+    "    def start_engine(self): # empty method\n",
+    "        pass\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        print(\"Car Engine Started\")\n",
+    "    \n",
+    "def operate_vehicle(vehicle):\n",
+    "    vehicle.start_engine()\n",
+    "    vehicle.drive()\n",
+    "\n",
+    "car = Car()\n",
+    "operate_vehicle(car)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -45,7 +82,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.0"
   }
  },
