--- a/8-Class And Objects/8.7-OperatorOverloading.ipynb
+++ b/8-Class And Objects/8.7-OperatorOverloading.ipynb
@@ -226,24 +226,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ComplexNumber:\n",
+    "    def __init__(self, real, imag):\n",
+    "        self.real = real\n",
+    "        self.imag = imag\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return ComplexNumber(self.real + other.real, self.imag + other.imag)\n",
+    "\n",
+    "    def __sub__(self, other):\n",
+    "        return ComplexNumber(self.real - other.real, self.imag - other.imag)\n",
+    "    def __mul__(self, other):\n",
+    "        real_part = self.real * other.real - self.imag * other.imag\n",
+    "        imag_part = self.real * other.imag - self.imag * other.real\n",
+    "        return ComplexNumber(real_part, imag_part)\n",
+    "    def __truediv__(self, other):\n",
+    "        denominator = other.real**2 + other.imag**2\n",
+    "        real_part = (self.real * other.real + self.imag * other.imag)/denominator\n",
+    "        imag_part = (self.real * other.real - self.imag * other.imag)/denominator\n",
+    "        return ComplexNumber(real_part, imag_part)\n",
+    "    def __eq__(self, other):\n",
+    "        return self.real == other.real and self.imag == other.imag\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.real} + {self.imag}i\"\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "c1 = ComplexNumber(2, 3)\n",
+    "c2 = ComplexNumber(1, 4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 + 7i\n",
+      "1 + -1i\n",
+      "-10 + 5i\n",
+      "0.8235294117647058 + -0.5882352941176471i\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c1 + c2)\n",
+    "print(c1 - c2)\n",
+    "print(c1 * c2)\n",
+    "print(c1 / c2)\n",
+    "print(c1 == c2)"
+   ]
   }
  ],
  "metadata": {
