--- a/9-Advance Python Concepts/9.1-Iterators.ipynb
+++ b/9-Advance Python Concepts/9.1-Iterators.ipynb
@@ -183,10 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "a = sys.stdout.write(\"Printing\")"
+   ]
   },
   {
    "cell_type": "code",
